[gd_scene load_steps=11 format=2]

[ext_resource path="res://Assets/Fonts/Pixeltype.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Ui/MainMenu.gd" type="Script" id=2]
[ext_resource path="res://Ui/Main.tscn" type="PackedScene" id=3]

[sub_resource type="DynamicFont" id=1]
size = 200
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=8]
size = 100
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=5]
size = 125
font_data = ExtResource( 1 )

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0, 0, 0, 0.490196 )
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0, 0, 0, 0.686275 )
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 0, 0, 0, 0.392157 )
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="DynamicFont" id=7]
size = 125
font_data = ExtResource( 1 )

[node name="MainMenu" type="Node2D"]
script = ExtResource( 2 )
mainGameScene = ExtResource( 3 )

[node name="ColorRect" type="ColorRect" parent="."]
margin_right = 1024.0
margin_bottom = 720.0
color = Color( 0.247059, 0.266667, 0.454902, 1 )

[node name="MarginContainer" type="MarginContainer" parent="."]
margin_right = 1024.0
margin_bottom = 720.0
custom_constants/margin_right = 20
custom_constants/margin_top = 5
custom_constants/margin_left = 20
custom_constants/margin_bottom = 15

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
margin_left = 20.0
margin_top = 5.0
margin_right = 1004.0
margin_bottom = 705.0

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer"]
margin_right = 984.0
margin_bottom = 348.0
size_flags_horizontal = 3
size_flags_vertical = 7
custom_fonts/font = SubResource( 1 )
text = "Demo Game"
align = 1
valign = 1

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
margin_top = 352.0
margin_right = 984.0
margin_bottom = 700.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/VBoxContainer/HBoxContainer"]
margin_right = 984.0
margin_bottom = 348.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/margin_right = 250
custom_constants/margin_left = 250

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer/HBoxContainer/MarginContainer"]
margin_left = 250.0
margin_right = 734.0
margin_bottom = 348.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 25

[node name="MarginContainer3" type="MarginContainer" parent="MarginContainer/VBoxContainer/HBoxContainer/MarginContainer/VBoxContainer"]
margin_right = 484.0
margin_bottom = 99.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer/MarginContainer/VBoxContainer/MarginContainer3"]
margin_top = 18.0
margin_right = 484.0
margin_bottom = 81.0
custom_fonts/font = SubResource( 8 )
text = "New Game:"
align = 1
valign = 2

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer/HBoxContainer/MarginContainer/VBoxContainer"]
margin_top = 124.0
margin_right = 484.0
margin_bottom = 223.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/VBoxContainer/HBoxContainer/MarginContainer/VBoxContainer/HBoxContainer"]
margin_right = 240.0
margin_bottom = 99.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="1PNewGame" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer/MarginContainer/VBoxContainer/HBoxContainer/MarginContainer"]
margin_right = 240.0
margin_bottom = 99.0
focus_mode = 0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = SubResource( 5 )
custom_styles/hover = SubResource( 2 )
custom_styles/pressed = SubResource( 3 )
custom_styles/normal = SubResource( 4 )
text = "1P"

[node name="MarginContainer2" type="MarginContainer" parent="MarginContainer/VBoxContainer/HBoxContainer/MarginContainer/VBoxContainer/HBoxContainer"]
margin_left = 244.0
margin_right = 484.0
margin_bottom = 99.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="2PNewGame" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer/MarginContainer/VBoxContainer/HBoxContainer/MarginContainer2"]
margin_right = 240.0
margin_bottom = 99.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = SubResource( 5 )
custom_styles/hover = SubResource( 2 )
custom_styles/pressed = SubResource( 3 )
custom_styles/normal = SubResource( 4 )
text = "2P"

[node name="MarginContainer4" type="MarginContainer" parent="MarginContainer/VBoxContainer/HBoxContainer/MarginContainer/VBoxContainer"]
margin_top = 248.0
margin_right = 484.0
margin_bottom = 348.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="QuitBtn" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer/MarginContainer/VBoxContainer/MarginContainer4"]
margin_right = 484.0
margin_bottom = 100.0
focus_mode = 0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = SubResource( 7 )
custom_styles/hover = SubResource( 2 )
custom_styles/pressed = SubResource( 3 )
custom_styles/normal = SubResource( 4 )
text = "Quit"

[connection signal="button_up" from="MarginContainer/VBoxContainer/HBoxContainer/MarginContainer/VBoxContainer/HBoxContainer/MarginContainer/1PNewGame" to="." method="_on_1PNewGame_button_up"]
[connection signal="button_up" from="MarginContainer/VBoxContainer/HBoxContainer/MarginContainer/VBoxContainer/HBoxContainer/MarginContainer2/2PNewGame" to="." method="_on_2PNewGame_button_up"]
[connection signal="button_up" from="MarginContainer/VBoxContainer/HBoxContainer/MarginContainer/VBoxContainer/MarginContainer4/QuitBtn" to="." method="_on_QuitBtn_button_up"]
